--- a/project/build.properties
+++ b/project/build.properties
@@ -1,9 +1,9 @@
-#Project properties
-#Mon Jan 11 15:23:39 BRST 2010
-project.organization=org.rosettacode.conway_life.scala
+#Project Properties
+#Mon Jan 18 22:48:26 BRST 2010
 project.name=ConwayLife
-sbt.version=0.6.10
+project.organization=org.rosettacode.conway_life.scala
 project.version=1.0
+sbt.version=0.7.7
 def.scala.version=2.7.7
-build.scala.versions=2.8.0.Beta1-RC7
+build.scala.versions=2.9.0
 project.initialize=false
